@@ -43,8 +43,8 @@ using namespace OpenBabel;
 using namespace Eigen;
 using namespace Avogadro;
 
-BSDYEngine::BSDYEngine(QObject *parent) : Engine(parent), m_update(true),
-  m_settingsWidget(0), m_atomRadiusPercentage(0.3), m_bondRadius(0.1), m_glwidget(0)
+BSDYEngine::BSDYEngine(QObject *parent) : Engine(parent), m_glwidget(0), m_update(true),
+  m_settingsWidget(0), m_atomRadiusPercentage(0.3), m_bondRadius(0.1)
 {
   setName(tr("Dynamic Ball and Stick"));
 
